e17 (0.22.0-2) UNRELEASED; urgency=medium

  * Team upload.
  * Fix debhelper 10 (previous version was missing a commit)
  * d/rules: simplify lintian-overrides path generation

 -- Ross Vandegrift <ross@stgulik>  Wed, 08 Nov 2017 18:45:01 -0800

e17 (0.22.0-1) experimental; urgency=medium

  * Team upload.
  * New upstream release (Closes: #775369, #855436, #728423)

  [ Ross Vandegrift ]
  * Update gbp.conf for debian experimental branch
  * Update README.source for tarball-based workflow
  * Put enlightenment systemd unit in examples (Closes: #854698)
  * d/p/10_type_restore_LDFLAGS.diff: drop, applied upstream
  * debian/watch: fix handling of rc versions
  * debian/control: Enlightenment now requires EFL >= 1.20.5, so the
    libelementary-dev Build-Dep can be dropped.
  * Ship cpuclock_sysfs helper for new sysinfo module.
  * d/p/05_fix_enlightenment_remote_bashism.diff: fix bashism (Closes: #690719)
  * Add maintscript to handle renaming enlightenment-applications.menu ->
    e-applications.menu (Closes: #704185)
  * Recommend terminology | x-terminal-emulator (Closes: #848490)
  * Enable connman module support (Closes: #593366)
  * Re-enable ALSA mixer support, it can now co-exist with pulse
  * Enable elocation support for geolocation
  * Switch to debhelper 10

 -- Ross Vandegrift <ross@kallisti.us>  Sun, 05 Nov 2017 10:10:52 -0800

e17 (0.21.5-1) experimental; urgency=medium

  [ Ross Vandegrift ]
  * Team upload.
  * New upstream release
  * debian/gbp.conf: import & build upstream tarballs
  * debian/rules: only set setuid perms when running binary-arch rules

  [ Andreas Metzler ]
  * 10_typo_restore_LDFLAGS.diff: Fix typo in configure.ac (upstream), causing
    empty LDFLAGS.

 -- Ross Vandegrift <ross@kallisti.us>  Sun, 18 Dec 2016 09:58:16 -0500

e17 (0.21.3-1) experimental; urgency=medium

  * Team upload.
  * New upstream release. (Closes: #836089)

  [ Ross Vandegrift ]
  * enlightenment_backlight needs to be setuid root for backlight control